# ReachingUniversalis

./: .gitignore  Bugs.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LongBenchmark  LongBenchmark_new  Questions.md  TODO.md  benchmark.sh  build.sh  install-deps.sh  run-remote.sh  run_all_tests.sh  screenshot.sh  test.sh  wsl-doubleclick-test.bat  wsl-doubleclick-test.sh  wsl-sh-launcher.bat
.claude/: settings.local.json
.claude/agents/: benchmark-tester.md  code-review.md  orchestrator.md  supervisor.md  ui-orchestrator.md  ui-worker.md  worker.md
Docs/: Alpha1.md  DesignSpec.md  Outline.md  UI-Feeling-Guide.md
Docs/Currect Version/: AI-Idea.md  Idea doc.md
ReachingUniversalis/: ReachingUniversalis.sln  ReachingUniversalis.uproject
ReachingUniversalis/Config/: DefaultEngine.ini  DefaultGame.ini
ReachingUniversalis/Source/: ReachingUniversalis.Target.cs  ReachingUniversalisEditor.Target.cs
ReachingUniversalis/Source/ReachingUniversalis/: ReachingUniversalis.Build.cs  ReachingUniversalis.cpp
User Input/: Bugs.md  Wishlist.md
plans/: Alpha0_Architecture.md  next-alpha-goal.md
src/: DynBitset.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  NPC.cpp  NPC.h  Need.h  ResourceNode.cpp  ResourceNode.h  World.cpp  World.h  main.cpp
src/ECS/: Components.h
src/ECS/Systems/: AgentDecisionSystem.cpp  AgentDecisionSystem.h  BirthSystem.cpp  BirthSystem.h  CameraSystem.cpp  CameraSystem.h  ConstructionSystem.cpp  ConstructionSystem.h  ConsumptionSystem.cpp  ConsumptionSystem.h  DeathSystem.cpp  DeathSystem.h  EconomicMobilitySystem.cpp  EconomicMobilitySystem.h  MovementSystem.cpp  (+19 more)
src/Threading/: CommandQueue.h  InputSnapshot.h  RenderSnapshot.h  SimThread.cpp  SimThread.h
src/UI/: HUD.cpp  HUD.h  UIState.h
src/World/: SeasonDef.h  SeasonThresholds.h  WorldGenerator.cpp  WorldGenerator.h  WorldLoader.cpp  WorldLoader.h  WorldSchema.h
tests/: BuildMapOrderingTest.cpp  DynBitsetTest.cpp  SeasonValidationTest.cpp  SkillRateTest.cpp  test_season_validation.sh  test_seasons_invalid.toml
worlds/medieval/: agents.toml  events.toml  facilities.toml  goals.toml  keybindings.toml  needs.toml  professions.toml  resources.toml  seasons.toml  skills.toml  world.toml
